--- a/src/products/grid-display.css
+++ b/src/products/grid-display.css
@@ -124,7 +124,7 @@
         width: 100%;
     }
     .card-info4{
-        width: 170px;
+        width: 100%;
     }
     .cart-buy-abt2{
         display: grid;
