--- a/src/navbar/Nav.css
+++ b/src/navbar/Nav.css
@@ -194,8 +194,8 @@
   background-color:black;
   color:white;
   border-radius:50%;
-  widtH:30PX;
-  Height:30px;
+  width:35px;
+  Height:35;
   aspect-ratio:1;
   transition:.5s ease;
 
