--- a/src/cart/cart.css
+++ b/src/cart/cart.css
@@ -258,7 +258,7 @@ font-weight: bolder;
     .cart{
         width:100%;
         display:grid;
-        place-content:center;
+        align-items:center;
         padding:3px;
     }
 }
