--- a/src/cart/cart.css
+++ b/src/cart/cart.css
@@ -222,12 +222,18 @@ font-weight: bolder;
     text-align: center;
     color: #999;
     font-size: 1.2rem;
+    text-decoration: none;
+   
 }
 
 .total-amount {
     text-align: left;
     margin-top: 10px;
     padding:5px;
+  
+}
+.total-amount h3{
+    text-decoration: underline;
 }
 
 .checkout-link {
@@ -239,18 +245,22 @@ font-weight: bolder;
     justify-self: center;
     display: grid;
     place-content: center;
-    padding: 7px 80px;
+    padding: 7px 90px;
     border-radius: 5px;
     transition: background-color 0.3s;
     margin-top: 20px;
-    font-size:16px;
+    font-size:20px;
     text-decoration:none;
+    transition: .3s ease
    
 }
 
 .checkout-link:hover {
     background-color: var(--dark-color);
     color:white;
+    transition: background-color 0.3s;
+    letter-spacing: .5px ;
+    text-decoration: none;
 }
 
 .empty {
