--- a/src/checkout/checkout.css
+++ b/src/checkout/checkout.css
@@ -4,9 +4,11 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  min-height: 100vh;
   position: absolute;
-  z-index: 4567890876543;
-  background-color: whitesmoke;
+  z-index: 4567890876543898765789;
+  background-color: red;
   top: 0;
   padding: 10px;
   overflow-y: scroll;
