--- a/src/home/footer.css
+++ b/src/home/footer.css
@@ -87,3 +87,23 @@ display: flex;
 flex-direction: column;
 text-align: left;
 }
+
+.social a {
+  text-decoration: none;
+  color: red; /* Default text color */
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+
+/* Style for the icons */
+.social a svg {
+  margin-right: 8px; /* space between icon and text */
+  font-size: 24px; /* size of the icon */
+}
+
+/* Hover effect for the links */
+.social a:hover {
+  color: #0073e6; /* Change text color on hover */
+}
+
