--- a/src/checkout/checkout.css
+++ b/src/checkout/checkout.css
@@ -3,12 +3,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  position: absolute;
   z-index: 4567890876543898765789;
-  background-color: red;
+  background-color: white;
   top: 0;
   padding: 10px;
   overflow-y: scroll;
