--- a/src/cart/cart.css
+++ b/src/cart/cart.css
@@ -271,6 +271,32 @@ font-weight: bolder;
    gap: 20px;
    animation:empty 3s ease infinite ;
 }
+.close-cart-btn {
+    display:grid;
+    place-content:center;
+    background-color: transparent;
+    color:black;
+    outline:2px solid black;
+    padding:10px;
+    font-weight:bold;
+    width:25px;
+    height:25px;
+    border-radius:50%;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.close-cart-btn:hover{
+    color:white;
+    background-color:black;
+    outline:none;
+    transition:.3s ease;
+    scale:1.009;
+
+}
 @keyframes empty {
     0% {
 
